--- a/templates/brands.html
+++ b/templates/brands.html
@@ -5,18 +5,174 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Inventory</title>
+    <style>
+        body {
+            background-color: #fafafa;
+        }
+
+        .navbar {
+            background-color: #000 !important;
+        }
+
+        .nav-link {
+            color: #111 !important;
+        }
+
+        .nav-link.active {
+            color: #02bebe !important;
+        }
+
+        .nav-link:hover {
+            color: #02bebe !important;
+        }
+
+        main {
+            display: flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+        }
+
+        .cat-card {
+            width: 400px;
+            border-radius: 8px;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+            transform: scale(0.8);
+            transition: all 250ms ease-in-out;
+                          text-transform: capitalize;
+
+        }
+
+        .cat-card:hover {
+            transform: scale(0.9);
+            box-shadow: rgba(0, 0, 0, 0.45) 0px 15px 10px -30px;
+
+        }
+
+        img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+
+        .img-bx {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            margin-bottom: 30px;
+            box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+        }
+
+        .empty {
+            width: 100%;
+            height: 80vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 48px;
+            font-weight: lighter;
+            text-transform: uppercase;
+            letter-spacing: 0.2em;
+        }
+
+        .link {
+            text-decoration: none;
+            color: #fff !important;
+        }
+
+        .link:hover {
+            color: #f1f1f1 !important;
+        }
+    </style>
 </head>
 <body>
-<ul>
+
+<nav class="navbar navbar-dark bg-dark  ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Inventory</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Inventory Dashboard</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="/">
+                            Home
+                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link  " aria-current="page" href="{% url "categories" %}">
+                            Categories
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url "brand" %}">
+                            Brands</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "create-product" %}">
+                            Create Product
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url "create-brand" %}">
+                            Create Brand</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url "create-category" %}">
+                            Create Category
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+<main class="container mt-5">
+
     {% for brand in brands %}
-        <li>
-            {{ brand.brand_name }}
-            <img src="/media/{{ brand.brand_image }}">
-        </li>
+        <div class="cat-card">
+            <div class="img-bx">
+                <img src="/media/{{ brand.brand_image }}" alt=brand images">
+
+            </div>
+            <h2 class="title">{{ brand.brand_name }}</h2>
+            <a href="#" class="link">View Items →</a>
+        </div>
+
     {% empty %}
-        <h1>No brands presents</h1>
+        <h1 class="empty">No brands presents</h1>
     {% endfor %}
-</ul>
+
+</main>
+<script>
+    const card = document.querySelectorAll(".cat-card");
+    const randomColor = () => {
+        card.forEach((c) => {
+            c.style.backgroundColor = "hsla(" + Math.floor(Math.random() * (360)) + ", 75%, 58%, 1)"
+        })
+    }
+    randomColor();
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
