--- a/templates/create-category.html
+++ b/templates/create-category.html
@@ -5,17 +5,150 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Inventory</title>
+    <style>
+        body {
+            background-color: #fafafa;
+            min-height: 100vh;
+        }
+
+        .navbar {
+            background-color: #000 !important;
+        }
+
+        .nav-link {
+            color: #111 !important;
+        }
+
+        .nav-link.active {
+            color: #02bebe !important;
+        }
+
+        .nav-link:hover {
+            color: #02bebe !important;
+        }
+
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            min-height: 80vh;
+        }
+
+        form{
+            background-color: #fff;
+             width: 80%;
+             padding:40px;
+             border-radius: 10px;
+             box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+             display: flex;
+             flex-direction: column;
+             position: relative;
+
+        }
+
+        form h1 {
+            font-size: 28px;
+            font-weight: normal;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            width: 100%;
+            border-bottom: 1px dashed #b0b0b0;
+            padding-bottom: 10px;
+            margin-bottom: 30px;
+        }
+
+        form label {
+            font-size: 18px;
+            letter-spacing: 1px;
+        }
+
+        form button {
+            outline: none;
+            background-color: transparent;
+            color: #000;
+            border: 2px solid #000;
+            width: 100px;
+            padding: 5px 10px;
+            margin-top: 20px;
+            align-self: flex-end;
+            transition: all 250ms ease-in-out;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+        }
+
+        form button:hover {
+            color: #fff;
+            background-color: #000;
+        }
+    </style>
 </head>
 <body>
-<ul>
+<nav class="navbar navbar-dark bg-dark  ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Inventory</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Inventory Dashboard</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="/">
+                            Home
+                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="{% url "categories" %}">
+                            Categories
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "brand" %}">
+                            Brands</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url "create-product" %}">
+                            Create Product
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url "create-brand" %}">
+                            Create Brand</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url "create-category" %}">
+                            Create Category
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+<main class="container  mt-3">
     <form method="post" enctype='multipart/form-data'>
-        <h1>Create Category</h1>
+        <h1>Add Category</h1>
         {% csrf_token %}
         {{ form }}
         {{ error }}
         <button type="submit">Submit</button>
     </form>
-</ul>
+</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
