--- a/templates/home.html
+++ b/templates/home.html
@@ -5,39 +5,191 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Inventory</title>
+    <style>
+        body {
+            background-color: #fafafa;
+            min-height: 100vh;
+        }
+
+        .navbar {
+            background-color: #000 !important;
+        }
+
+        .nav-link {
+            color: #111 !important;
+        }
+
+        .nav-link.active {
+            color: #02bebe !important;
+        }
+
+        .nav-link:hover {
+            color: #02bebe !important;
+        }
+
+        main {
+            display: flex;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+        }
+
+        .prod-card {
+            background-color: #fff;
+            width: 350px;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 8px;
+            box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+        }
+
+
+
+        img {
+            width: 190px;
+            border-radius: 5px;
+        }
+
+        .img-bx {
+             width: 100%;
+            height: 220px;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            margin-bottom: 30px;
+            box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+        }
+
+        .heading, .content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            margin: 10px;
+            color: #222;
+            text-transform: capitalize;
+        }
+
+        .link {
+            text-decoration: none;
+            color: #02bebe !important;
+        }
+        .link:hover{
+            color: #008888 !important;
+        }
+
+        .content h5 {
+            font-size: 18px;
+            color: #565656;
+            letter-spacing: 1px;
+        }
+
+        .title {
+            font-size: 24px;
+
+            font-weight: 600;
+        }
+
+        .price {
+            color: #02bebe !important;
+            font-size: 20px;
+        }
+    .empty{
+        width: 100%;
+        height: 80vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 48px;
+        font-weight: lighter;
+        text-transform: uppercase;
+        letter-spacing: 0.2em;
+    }
+    </style>
 </head>
 <body>
-<ul>
-    <a href="{% url "categories" %}">
-        Categories
-    </a>
-    <a href="{% url "brand" %}">
-        Brands
-    </a>
-    <a href="{% url "create-product" %}">
-        Create Product
-    </a>
-    <a href="{% url "create-brand" %}">
-        Create Brand
-    </a>
-    <a href="{% url "create-category" %}">
-        Create Category
-    </a>
+
+
+<nav class="navbar navbar-dark bg-dark  ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">Inventory</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Inventory Dashboard</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">
+                            Home
+                        </a>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="{% url "categories" %}">
+                            Categories
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "brand" %}">
+                            Brands</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "create-product" %}">
+                            Create Product
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url "create-brand" %}">
+                            Create Brand</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url "create-category" %}">
+                            Create Category
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+<main class="container mt-5">
     {% for product in products %}
-        <li>
-            {{ product.name }}
-            <img src="/media/{{ product.image }}">
-            <h1>
-                Brand Name : {{ product.brand.brand_name }}
-            </h1>
-            <h1>
-                Category Name : {{ product.category.category_name }}
-            </h1>
-        </li>
+
+        <div class="prod-card">
+            <div class="img-bx"><img alt="Product image" src="/media/{{ product.image }}"></div>
+            <div class="heading">
+                <h2 class="title">{{ product.name }}</h2>
+                <h2 class="price">₹{{ product.price }}</h2>
+            </div>
+            <div class="content">
+                <h5 class="brand">Category: {{ product.brand.brand_name }}</h5>
+                <h5 class="quantity">Stock: {{ product.quantity }}</h5>
+            </div>
+            <a href="#" class="link">More Details →</a>
+
+        </div>
     {% empty %}
-        <h1>No products presents</h1>
+        <h1 class="empty">No products presents</h1>
     {% endfor %}
-</ul>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
