--- a/templates/create-product.html
+++ b/templates/create-product.html
@@ -84,54 +84,7 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark  ">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Inventory</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-                aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Inventory Dashboard</h5>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/">
-                            Home
-                        </a>
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="{% url "categories" %}">
-                            Categories
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url "brand" %}">
-                            Brands</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url "create-product" %}">
-                            Create Product
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="{% url "create-brand" %}">
-                            Create Brand</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="{% url "create-category" %}">
-                            Create Category
-                        </a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </div>
-</nav>
+{% include 'navbar.html' %}
 
 <main class="container  mt-3 mb-5">
     <form method="post" enctype='multipart/form-data'>
