--- a/templates/category-products.html
+++ b/templates/category-products.html
@@ -5,12 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Inventory</title>
     <style>
         body {
             background-color: #fafafa;
+            min-height: 100vh;
         }
 
         .navbar {
@@ -35,41 +38,69 @@
             flex-wrap: wrap;
         }
 
-        .cat-card {
-            width: 400px;
-            border-radius: 8px;
+        .prod-card {
+            background-color: #fff;
+            width: 350px;
             padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-            transform: scale(0.8);
-            transition: all 250ms ease-in-out;
-            text-transform: capitalize;
+            border-radius: 8px;
+            box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
         }
 
-        .cat-card:hover {
-            transform: scale(0.9);
-            box-shadow: rgba(0, 0, 0, 0.45) 0px 15px 10px -30px;
-
-        }
 
         img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
+            width: 190px;
+            border-radius: 5px;
         }
 
         .img-bx {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
+            width: 100%;
+            height: 220px;
+            border-radius: 8px;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 20px;
             margin-bottom: 30px;
             box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+        }
+
+        .heading, .content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            margin: 10px;
+            color: #222;
+            text-transform: capitalize;
+        }
+
+        .link {
+            text-decoration: none;
+            color: #02bebe !important;
+        }
+
+        .link:hover {
+            color: #008888 !important;
+        }
+
+        .content h5 {
+            font-size: 18px;
+            color: #565656;
+            letter-spacing: 1px;
+        }
+
+        .title {
+            font-size: 24px;
+
+            font-weight: 600;
+        }
+
+        .price {
+            color: #02bebe !important;
+            font-size: 20px;
         }
 
         .empty {
@@ -83,49 +114,35 @@
             text-transform: uppercase;
             letter-spacing: 0.2em;
         }
-
-        .link {
-            text-decoration: none;
-            color: #fff !important;
-        }
-
-        .link:hover {
-            color: #f1f1f1 !important;
-        }
     </style>
 </head>
 <body>
+
 {% include 'navbar.html' %}
-<h1 style="text-align: center; font-family: monospace">
-    Categories
-</h1>
 <main class="container mt-5">
+    {% for product in products %}
 
-    {% for category in categories %}
-        <div class="cat-card">
-            <div class="img-bx">
-                <img src="/media/{{ category.category_image }}" alt="category image">
+        <div class="prod-card">
+            <div class="img-bx"><img alt="Product image" src="/media/{{ product.image }}"></div>
+            <div class="heading">
+                <h2 class="title">{{ product.name }}</h2>
+                <h2 class="price">₹{{ product.price }}</h2>
             </div>
-            <h2 class="title">{{ category.category_name }}</h2>
-            <a href="{% url "product-detail-category" category.id %}" class="link">View Items →</a>
+            <div class="content">
+                <h5 class="brand">Category: {{ product.brand.brand_name }}</h5>
+                <h5 class="quantity">Stock: {{ product.quantity }}</h5>
+            </div>
+            <a href="{% url 'product-detail' product.id %}" class="link">More Details →</a>
+
         </div>
-
     {% empty %}
-        <h1 class="empty">No categories presents</h1>
+        <h1 class="empty">No products presents</h1>
     {% endfor %}
-
 </main>
-<script>
-    const card = document.querySelectorAll(".cat-card");
-    const randomColor = () => {
-        card.forEach((c) => {
-            c.style.backgroundColor = "hsla(" + Math.floor(Math.random() * (360)) + ", 75%, 58%, 1)"
-        })
-    }
-    randomColor();
-</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </body>
 </html>
