--- a/templates/developers.html
+++ b/templates/developers.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Inventory</title>
+    <title>Developers</title>
     <style>
         body {
             background-color: #fafafa;
@@ -46,6 +46,7 @@
             transform: scale(0.8);
             transition: all 250ms ease-in-out;
             text-transform: capitalize;
+
         }
 
         .cat-card:hover {
@@ -97,21 +98,21 @@
 <body>
 {% include 'navbar.html' %}
 <h1 style="text-align: center; font-family: monospace">
-    Categories
+    Developers
 </h1>
 <main class="container mt-5">
 
-    {% for category in categories %}
+    {% for developer in developers %}
         <div class="cat-card">
             <div class="img-bx">
-                <img src="/media/{{ category.category_image }}" alt="category image">
+                <img src="/media/{{ developer.image }}" alt=brand images">
             </div>
-            <h2 class="title">{{ category.category_name }}</h2>
-            <a href="{% url "product-detail-category" category.id %}" class="link">View Items →</a>
+            <h2 class="title">{{ developer.name }}</h2>
+            <h2 class="title">{{ developer.rollNo }}</h2>
         </div>
 
     {% empty %}
-        <h1 class="empty">No categories presents</h1>
+        <h1 class="empty">No developers presents</h1>
     {% endfor %}
 
 </main>
@@ -119,7 +120,7 @@
     const card = document.querySelectorAll(".cat-card");
     const randomColor = () => {
         card.forEach((c) => {
-            c.style.backgroundColor = "hsla(" + Math.floor(Math.random() * (360)) + ", 75%, 58%, 1)"
+            c.style.backgroundColor = "rgba(0,0,0,.1)"
         })
     }
     randomColor();
