--- a/templates/developers.html
+++ b/templates/developers.html
@@ -13,22 +13,6 @@
             background-color: #fafafa;
         }
 
-        .navbar {
-            background-color: #000 !important;
-        }
-
-        .nav-link {
-            color: #111 !important;
-        }
-
-        .nav-link.active {
-            color: #02bebe !important;
-        }
-
-        .nav-link:hover {
-            color: #02bebe !important;
-        }
-
         main {
             display: flex;
             justify-content: space-evenly;
@@ -41,17 +25,23 @@
             padding: 20px;
             display: flex;
             flex-direction: column;
+            background-color: #029b9b;
+            color: #fff;
+            border: 2px solid #029b9b;
             align-items: center;
             box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
             transform: scale(0.8);
             transition: all 250ms ease-in-out;
             text-transform: capitalize;
+            user-select: none;
 
         }
 
         .cat-card:hover {
             transform: scale(0.9);
             box-shadow: rgba(0, 0, 0, 0.45) 0px 15px 10px -30px;
+            background-color: transparent;
+            color: #029b9b;
 
         }
 
@@ -85,14 +75,7 @@
             letter-spacing: 0.2em;
         }
 
-        .link {
-            text-decoration: none;
-            color: #fff !important;
-        }
 
-        .link:hover {
-            color: #f1f1f1 !important;
-        }
     </style>
 </head>
 <body>
@@ -116,15 +99,7 @@
     {% endfor %}
 
 </main>
-<script>
-    const card = document.querySelectorAll(".cat-card");
-    const randomColor = () => {
-        card.forEach((c) => {
-            c.style.backgroundColor = "rgba(0,0,0,.1)"
-        })
-    }
-    randomColor();
-</script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
