--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,7 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">
+                        <a class="nav-link " aria-current="page" href="/">
                             Home
                         </a>
                     <li class="nav-item">
@@ -47,16 +47,16 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'create-product' %}">
-                            Create Product
+                            Add Product
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="{% url 'create-brand' %}">
-                            Create Brand</a>
+                            Add Brand</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="{% url 'create-category' %}">
-                            Create Category
+                            Add Category
                         </a>
                     </li>
                     <li class="nav-item">
