--- a/templates/product-delete.html
+++ b/templates/product-delete.html
@@ -11,119 +11,208 @@
     <style>
         body {
             background-color: #fafafa;
+            max-height: 100vh;
+            overflow: hidden;
+            position: relative;
         }
-
 
         main {
+            height: 110vh;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: rgba(9, 30, 66, 0.25) 0 4px 8px -2px, rgba(9, 30, 66, 0.08) 0 0 0 1px;
             display: flex;
-            justify-content: space-evenly;
-            flex-wrap: wrap;
-        }
-
-        .cat-card {
-            width: 400px;
-            border-radius: 8px;
+            align-items: flex-start;
+            justify-content: space-between;
             padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-            transform: scale(0.8);
-            transition: all 250ms ease-in-out;
-            text-transform: capitalize;
-        }
-
-        .cat-card:hover {
-            transform: scale(0.9);
-            box-shadow: rgba(0, 0, 0, 0.45) 0px 15px 10px -30px;
-
-        }
-
-        img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
         }
 
         .img-bx {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
+            width: 40%;
+            height: 60%;
+            background-color: #fff;
             display: flex;
             align-items: center;
             justify-content: center;
+            float: left;
+            padding: 30px;
+            box-shadow: rgba(33, 35, 38, 0.1) 10px 10px 10px -10px;
+        }
+
+        .img-bx img {
+            width: 350px;
+            height: 350px;
+        }
+
+
+        .content {
+            width: 56%;
             padding: 20px;
-            margin-bottom: 30px;
-            box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+            margin-top: 15px;
         }
 
-        .empty {
+        .product-details {
             width: 100%;
-            height: 80vh;
+        }
+
+        .title {
+            font-size: 32px;
+            text-transform: capitalize;
+        }
+
+        .product-details h3 {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 20px;
+            color: #727272;
+        }
+
+        h3 span {
+            font-size: 22px;
+            padding: 5px;
+        }
+
+        .description {
+            margin-top: 10px;
+            font-size: 14px;
+            color: #757575;
+
+        }
+
+        .category, .brand {
+            display: flex;
+            width: 100%;
+            margin-top: 20px;
+            align-items: center;
+            position: relative;
+        }
+
+        .img img {
+            position: absolute;
+            right: 20px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        h5 {
+
+            font-size: 16px;
+        }
+
+        .delete-button {
+            outline: none;
+            color: #fff;
+            background-color: darkred;
+            width: 100px;
+            border: 2px solid darkred;
+
+            padding: 5px 10px;
+            margin-top: 20px;
+            transition: all 250ms ease-in-out;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            font-weight: 700;
+        }
+
+        .delete-button:hover {
+            color: darkred;
+            background-color: transparent;
+
+        }
+        .button {
+            outline: none;
+            color: #fff;
+            background-color: #02bebe;
+            width: 100px;
+            border: 2px solid #02bebe;
+            text-decoration: none;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 48px;
-            font-weight: lighter;
+            padding: 5px 10px;
+            margin-top: 20px;
+            transition: all 250ms ease-in-out;
             text-transform: uppercase;
-            letter-spacing: 0.2em;
+            letter-spacing: 0.1em;
+            font-weight: 700;
         }
 
-        .link {
-            text-decoration: none;
-            color: #fff !important;
+        .button:hover {
+            color: #02bebe;
+            background-color: transparent;
+
         }
 
-        .link:hover {
-            color: #f1f1f1 !important;
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+
         }
+
+        form h2 {
+            font-size: 32px;
+            font-weight: 600;
+            text-transform: capitalize;
+            letter-spacing: 0.1em;
+        }
+
+        .overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(250, 250, 250, 0.81);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            top: 9.7%;
+            left: 0;
+            backdrop-filter: blur(5px);
+
+        }
+
+
     </style>
 </head>
 <body>
 
 {% include 'navbar.html' %}
 <main class="container mt-5">
-
-    <div class="cat-card">
-
-        <div class="prod-card">
-            <div class="img-bx"><img alt="Product image" src="/media/{{ product.image }}"></div>
-            <div class="heading">
-                <h2 class="title">{{ product.name }}</h2>
-                <h2 class="price">₹{{ product.price }}</h2>
-            </div>
-            <div class="content">
-                <h5 class="quantity">Stock: {{ product.quantity }}</h5>
-            </div>
+    <div class="img-bx">
+        <img alt="Product image" src="/media/{{ product.image }}">
+    </div>
+    <div class="content">
+        <div class="product-details">
+            <h1 class="title">{{ product.name }}</h1>
+            <h3>Stock qty: {{ product.quantity }} <span>₹{{ product.price }}</span></h3>
+            <p class="description">{{ product.description }}</p>
         </div>
-        <h1>Category</h1>
-        <div class="img-bx">
+        <div class="category img">
+            <h5>Category: </h5>
+            <h5> {{ product.category.category_name }}</h5>
             <img src="/media/{{ product.category.category_image }}" alt="category image">
         </div>
-        <h2 class="title">{{ product.category.category_name }}</h2>
-
-        <h1>Brand</h1>
-        <div class="img-bx">
+        <div class="brand img">
+            <h5>Brand: </h5>
+            <h5> {{ product.brand.brand_name }}</h5>
             <img src="/media/{{ product.brand.brand_image }}" alt="category image">
         </div>
-        <h2 class="title">{{ product.brand.brand_name }}</h2>
-        <form method="post">
-            {% csrf_token %}
-            <h1>Are you sure you want to delete this product?</h1>
-            <button type="submit">Yes</button>
-        </form>
     </div>
 
 </main>
-<script>
-    const card = document.querySelectorAll(".cat-card");
-    const randomColor = () => {
-        card.forEach((c) => {
-            c.style.backgroundColor = "hsla(" + Math.floor(Math.random() * (360)) + ", 75%, 58%, 1)"
-        })
-    }
-    randomColor();
-</script>
+<div class="overlay">
+    <form method="post">
+        {% csrf_token %}
+        <h2>Are you sure you want to delete this product?</h2>
+        <button type="submit" class="delete-button">Yes</button>
+        <a href="/" class="button">No</a>
+    </form>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
