--- a/templates/product-delete.html
+++ b/templates/product-delete.html
@@ -209,7 +209,7 @@
         {% csrf_token %}
         <h2>Are you sure you want to delete this product?</h2>
         <button type="submit" class="delete-button">Yes</button>
-        <a href="/" class="button">No</a>
+        <a href="{% url 'product-detail' product.id %}" class="button">No</a>
     </form>
 </div>
 
