--- a/templates/brands.html
+++ b/templates/brands.html
@@ -44,6 +44,7 @@
             width: 100px;
             height: 100px;
             border-radius: 50%;
+            object-fit: contain ;
         }
 
         .img-bx {
