--- a/templates/product-details.html
+++ b/templates/product-details.html
@@ -85,6 +85,7 @@
             margin-top: 20px;
             align-items: center;
             position: relative;
+            text-transform: capitalize;
         }
 
         .img img {
@@ -126,6 +127,7 @@
         }
         .disabled{
             color: #eaeaea !important;
+            pointer-events: none;
         }
     </style>
 </head>
