- search functionality - edit product - project details

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,11 +15,26 @@
         .nav-link:hover {
             color: #02bebe !important;
         }
+
+        .logo{
+            width: 100px;
+            height: 80px;
+        }
+
     </style>
 </head>
 <nav class="navbar navbar-dark bg-dark  ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Inventory</a>
+        <img src="/media/details/logo.png" class="logo">
+
+{#        <a class="navbar-brand" href="/">Inventory</a>#}
+
+        {% if searchform %}
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
+            </form>
+        {% endif %}
+
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -57,6 +72,11 @@
                     <li class="nav-item">
                         <a class="nav-link " href="{% url 'create-category' %}">
                             Add Category
+                        </a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link " href="{% url 'project-details' %}">
+                            Project Details
                         </a>
                     </li>
                     <li class="nav-item">
