--- a/templates/details.html
+++ b/templates/details.html
@@ -25,7 +25,10 @@
             width: 100%;
         }
 
-
+    h2{
+        margin-top: 30px;
+        text-decoration: underline;
+    }
     </style>
 </head>
 <body>
@@ -35,18 +38,18 @@
     Project Details
 </h1>
 <main class="container mt-4 mb-3">
-    <div>
-        <h3 style="text-align: center; font-family: monospace">
+
+        <h2  style="text-align: center; font-family: monospace">
             Relation Diagram
-        </h3>
-    </div>
+        </h2>
+
     <img src="/media/details/diagram.jpeg" class="image">
 
-    <div>
-        <h3 style="text-align: center; font-family: monospace">
+
+        <h2  style="text-align: center; font-family: monospace">
             ER Diagram
-        </h3>
-    </div>
+        </h2>
+
     <img src="/media/details/er.png" class="image">
 </main>
 
