--- a/templates/brand-products.html
+++ b/templates/brand-products.html
@@ -37,8 +37,9 @@
 
 
         img {
-            width: 190px;
-            border-radius: 5px;
+           width: 190px;
+            height: 190px;
+            border-radius: 5px;object-fit: contain;
         }
 
         .img-bx {
