--- a/templates/category-products.html
+++ b/templates/category-products.html
@@ -22,6 +22,7 @@
             display: flex;
             justify-content: space-evenly;
             flex-wrap: wrap;
+            padding-bottom: 20px;
         }
 
         .prod-card {
@@ -33,12 +34,14 @@
             align-items: center;
             border-radius: 8px;
             box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+            margin-bottom: 20px;
         }
 
 
         img {
-            width: 190px;
-            border-radius: 5px;
+           width: 190px;
+            height: 190px;
+            border-radius: 5px;object-fit: contain;
         }
 
         .img-bx {
