--- a/templates/brands.html
+++ b/templates/brands.html
@@ -40,7 +40,7 @@
 
         }
 
-        img {
+        .img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
@@ -91,7 +91,7 @@
     {% for brand in brands %}
         <div class="cat-card">
             <div class="img-bx">
-                <img src="/media/{{ brand.brand_image }}" alt=brand images">
+                <img src="/media/{{ brand.brand_image }}" alt="brand images" class="img">
 
             </div>
             <h2 class="title">{{ brand.brand_name }}</h2>
