--- a/templates/categories.html
+++ b/templates/categories.html
@@ -40,7 +40,7 @@
 
         }
 
-        img {
+        .img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
@@ -92,7 +92,7 @@
     {% for category in categories %}
         <div class="cat-card">
             <div class="img-bx">
-                <img src="/media/{{ category.category_image }}" alt="category image">
+                <img src="/media/{{ category.category_image }}" alt="category image" class="img">
             </div>
             <h2 class="title">{{ category.category_name }}</h2>
             <a href="{% url "product-detail-category" category.id %}" class="link">View Items →</a>
