--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,7 +29,7 @@
 </head>
 <nav class="navbar navbar-dark bg-dark  ">
     <div class="container-fluid">
-        <img src="/media/details/logo.svg" class="logo">
+        <a href="/"> <img alt="logo" src="/media/details/logo.svg" class="logo"></a>
 
 {#        <a class="navbar-brand" href="/">Inventory</a>#}
 
