--- a/templates/product-details.html
+++ b/templates/product-details.html
@@ -94,6 +94,7 @@
             width: 40px;
             height: 40px;
             border-radius: 50%;
+            object-fit: cover;
         }
 
         h5 {
